# python-language-server

./: .deepsource.toml  .gitignore  .pylintrc  .travis.yml  Dockerfile  Dockerfile.local  LICENSE  MANIFEST.in  Makefile  README.rst  appveyor.yml  circle.yml  nginx_default  requirements.txt  server_test.py  setup.cfg  setup.py  setup.py.orig  tox.ini  untitled.rst  versioneer.py
.circleci/: config.yml
.github/workflows/: deploy.dev.yml  deploy.prod.yml  release.yml
aws/ecr/: pyls-dev.task.json  pyls-prod.task.json
pyls/: __init__.py  __main__.py  _utils.py  _version.py  config.py  dispatcher.py  hookspecs.py  json_rpc_server.py  jsonrpc.py  language_server.py  lsp.py  markdown.py  message_manager.py  python_ls.py  rpc_manager.py  server.py  uri.py  uris.py  vscode.py  workspace.py
pyls/config/: __init__.py  _utils.py  config.py  flake8_conf.py  jedi_conf.py  pycodestyle_conf.py  pylint_conf.py  pyls_conf.py  source.py
pyls/json_rpc/: dispatcher.py  dispatchers.py  endpoint.py  exceptions.py
pyls/jsonrpc/: endpoint.py  exceptions.py  server.py  streams.py
pyls/plugins/: __init__.py  autopep8_format.py  code_lens.py  completion.py  ctags.py  definition.py  flake8_lint.py  folding.py  format.py  highlight.py  hover.py  importmagic_lint.py  jedi_completion.py  jedi_lint.py  jedi_rename.py  mccabe_lint.py  mypy_lint.py  preload_imports.py  pycodestyle_lint.py  pydocstyle_lint.py  pyflakes_lint.py  pylama_lint.py  pylint_lint.py  references.py  rope_completion.py  rope_imports.py  rope_organize_imports.py  rope_rename.py  signature.py  snippet_completions.py  spark_cost_checker.py  symbols.py  yapf_format.py
pyls/providers/: base.py  code_lens.py  completion.py  definition.py  format.py  hover.py  lint.py  signature.py  symbols.py
pyls_mypy/: __init__.py  plugin.py
scripts/circle/: pypi.sh
test/: __init__.py  conftest.py  fixtures.py  test_config.py  test_dispatcher.py  test_document.py  test_json_rpc_server.py  test_language_server.py  test_markdown.py  test_message_manager.py  test_plugin.py  test_pyls.py  test_rpc_manager.py  test_uris.py  test_utils.py  test_workspace.py
test/json_rpc/: manager.py  test_endpoint.py
test/jsonrpc/: test_endpoint.py  test_streams.py
test/markdown_files/: aifc.md  aifc.pydoc  anydbm.md  anydbm.pydoc  astroid.md  astroid.pydoc  numpy.linspace.md  numpy.linspace.pydoc  numpy.logspace.md  numpy.logspace.pydoc  scipy.md  scipy.pydoc  scipy.spatial.distance.md  scipy.spatial.distance.pydoc  scipy.spatial.md  scipy.spatial.pydoc
test/plugins/: test_autopep8_format.py  test_completion.py  test_ctags.py  test_definitions.py  test_flake8_lint.py  test_folding.py  test_format.py  test_highlight.py  test_hover.py  test_importmagic_lint.py  test_jedi_lint.py  test_jedi_rename.py  test_lint.py  test_mccabe_lint.py  test_mypy_lint.py  test_pycodestyle_lint.py  test_pydocstyle_lint.py  test_pyflakes_lint.py  test_pylama.py  (+7 more)
vscode-client/: README.md  package.json
(+13 files in other folders)
