[metadata]
name = python-language-server
author = Palantir Technologies, Inc.
description = Python Language Server for the Language Server Protocol
url = https://github.com/palantir/python-language-server
long_description = file: README.rst

[options]
packages = find:
install_requires =
    configparser; python_version<"3.0"
    future>=0.14.0
    futures; python_version<"3.2"
    backports.functools_lru_cache; python_version<"3.2"
    jedi>=0.15.0,<0.16
    python-jsonrpc-server>=0.1.0
    pluggy

[options.packages.find]
exclude =
    contrib
    docs
    test
    test.*


[pycodestyle]
ignore = E226, E722, W504
max-line-length = 120
exclude = test/plugins/.ropeproject,test/.ropeproject

[options.entry_points]
console_scripts = pyls = pyls.__main__:main
pyls =
    autopep8 = pyls.plugins.autopep8_format
    jedi_completion = pyls.plugins.jedi_completion
    jedi_definition = pyls.plugins.definition
    jedi_hover = pyls.plugins.hover
    jedi_highlight = pyls.plugins.highlight
    jedi_references = pyls.plugins.references
    jedi_signature_help = pyls.plugins.signature
    jedi_symbols = pyls.plugins.symbols
    mccabe = pyls.plugins.mccabe_lint
    preload = pyls.plugins.preload_imports
    pycodestyle = pyls.plugins.pycodestyle_lint
    pydocstyle = pyls.plugins.pydocstyle_lint
    pyflakes = pyls.plugins.pyflakes_lint
    pylint = pyls.plugins.pylint_lint
    rope_completion = pyls.plugins.rope_completion
    rope_rename = pyls.plugins.rope_rename
    yapf = pyls.plugins.yapf_format

[tool:pytest]
testpaths = test
addopts =
    --cov-report html --cov-report term --junitxml=pytest.xml
    --cov pyls --cov test

[options.extras_require]
all =
    autopep8
    mccabe
    pycodestyle
    pydocstyle>=2.0.0
    pyflakes>=1.6.0
    pylint
    rope>=0.10.5
    yapf
autopep8 = autopep8
mccabe = mccabe
pycodestyle = pycodestyle
pydocstyle = pydocstyle>=2.0.0
pyflakes = pyflakes>=1.6.0
pylint = pylint
rope = rope>0.10.5
yapf = yapf
test =
    versioneer
    pylint
    pytest
    mock
    pytest-cov
    coverage

[versioneer]
VCS = git
style = pep440
versionfile_source = pyls/_version.py
versionfile_build = pyls/_version.py
tag_prefix =
parentdir_prefix =
