[metadata]
name = pyls-mypy
author = Tom van Ommeren
description = Mypy linter for the Python Language Server
url = https://github.com/tomv564/pyls-mypy
long_description = file: README.rst

[options]
packages = find:
install_requires = python-language-server; mypy


[options.entry_points]
pyls = pyls_mypy = pyls_mypy.plugin

[options.extras_require]
test =
    tox
    versioneer
    pytest
    pytest-cov
    coverage

[versioneer]
VCS = git
style = pep440
versionfile_source = pyls_mypy/_version.py
versionfile_build = pyls_mypy/_version.py
tag_prefix =
parentdir_prefix =

[options.packages.find]
exclude =
    contrib
    docs
    test